# CS32

./: .gitignore
WonkyKongSample/: README.txt  WonkyKong
hw1/: Sequence.cpp  Sequence.h  TurnoutList.cpp  TurnoutList.h  newSequence.cpp  newSequence.h  tempTestSequence.cpp  testSequence.cpp  testTurnoutList.cpp  testnewSequence.cpp
hw2/: eval.cpp  hw.txt  mazequeue.cpp  mazestack.cpp
hw3/: landmark.cpp  linear.cpp  maze.cpp  tree.cpp
hw4/: CMakeLists.txt  CMakePresets.json  badlist.cpp  badvector.cpp  hw.txt  list.cpp  oddlist.cpp  oddvector.cpp  sorts.cpp
hw4/Sequence/: Sequence.h  main.cpp
hw5/: hw.docx
notes/: AllNotes.md  HashTables:Lec16-17.md  HashTables:Lec16.md  Heaps:Lec18.md  Sorting:Lec13-14.md  Trees:Lec14-15.md
proj1/: Bee.cpp  Bee.h  Game.cpp  Game.h  History.cpp  History.h  Player.cpp  Player.h  Room.cpp  Room.h  globals.h  init.cpp  main.cpp  utilities.cpp
proj1/Bee/: Bee.cpp  Bee.h
proj1/Game/: Game.h
proj1/Player/: Player.h
proj1/Room/: Room.h
proj1/utilities/: utilities.h
proj2/: Sequence.cpp  Sequence.h  report.docx  test  test.cpp  testSequence  testSequence.cpp
proj2/testSequence.dSYM/Contents/: Info.plist
proj3/: Actor.cpp  Actor.h  Makefile  README  StudentWorld.cpp  StudentWorld.h  WonkyKong  report.txt
proj3/WonkyKong/: GameController.cpp  StudentWorld.cpp
proj4/: CMakeLists.txt  airports.txt  bstset.h  fm.cpp  fm.h  main.cpp  params.txt  provided.cpp  provided.h  report.txt  test.cpp  tp.cpp  tp.h
temp/: CMakeLists.txt  CMakePresets.json  bruh.txt  bs  bs.cpp  bstset.h  fm.h  tp.h
(+4 files in other folders)
